added tooltip content using the template tag

--- a/index.html
+++ b/index.html
@@ -59,5 +59,11 @@
         </li>
       </ul>
     </section>
+
+    <!-- TEMPLATES TO BE USED IN APP JS FILE -->
+    <template id="tooltip">
+      <h2>More Info</h2>
+      <p></p>
+    </template>
   </body>
 </html>
